# pypi-wash

./: README.md  justfile  pyproject.toml
.github/workflows/: check-release.yml  pypi.yml
python/wash_cli/: __init__.py
scripts/: build_wheels.py  check_release.py
