[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "wash-bin"
dynamic = ["version"]
description = "wash CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/wasmCloud/wasmCloud"
Repository = "https://github.com/cataggar/pypi-wash"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["python/wash_cli"]
